--- a/САЙТ NERDS/catalog.html
+++ b/САЙТ NERDS/catalog.html
@@ -5,106 +5,163 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>студия Nerds</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
-        <ul>
-          <li><a href="info.html">Студия</a></li>
-          <li><a href="clients.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <ul>
-          <li><button type="button">Корзина</button></li>
-        </ul>
-      </nav>
-        <h1>Магазин готовых шаблонов</h1>
+  <header class="main-header">
+    <div class="container">
+      <div class="main-navigation-wrapper">
+        <div class="menu-logo">
+          <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
+        </div>
+        <nav class="main-navigation">
+          <ul class="site-navigation">
+            <li class="nav-item"><a href="index.html">Студия</a></li>
+            <li class="nav-item"><a href="clients.html">Клиенты</a></li>
+            <li class="nav-item nav-item-active"><a href="catalog.html">Магазин</a></li>
+            <li class="nav-item"><a href="contacts.html">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="menu-user">
+          <a class="menu-basket" href="#">Корзина</a>
+        </div>
+      </div>
+    </div>
+      <h1 class="catalog-title">Магазин готовых шаблонов</h1>
   </header>
-  <main>
-    <section>
-      <h2>СТОИМОСТЬ:</h2>
-        <ul>
-          <li><img src="img/slider.svg" width="368" height="204" alt="Слайдер"></li>
-          <li></li>
-        </ul>
-    </section>
-    <section>
-      <h2>СОРТИРОВАТЬ:</h2>
-        <ul>
-          <li>ПО ЦЕНЕ</li>
-          <li>ПО ТИПУ</li>
-          <li>ПО НАЗВАНИЮ</li>
-        </ul>
-          <button type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Кнопка вниз"/></button>
-          <button type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Кнопка вверх "/></button>
-      </section>
-      <section>
-        <h2>СЕТКА:</h2>
-          <ul>
-            <li><img src="img/radio-on.svg" width="25" height="25" alt="radio-on"/>Адаптивная</li>
-            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Фиксированная</li>
-            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Резиновая</li>
-          </ul>
-            <h2>ОСОБЕННОСТИ:</h2>
-          <ul>
-            <li><img src="img/checkbox-on.svg" width="27" height="23" alt="checkbox-on"/>Слайдер</li>
-            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>Блок преимуществ</li>
-            <li><img src="img/checkbox-on.svg" width="27" height="23" alt="checkbox-on"/>Новости</li>
-            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>Галерея</li>
-            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>корзина</li>
-          </ul>
-            <button type="button">Показать</button>
-        </section>
-        <section>
-          <h2>Шаблоны</h2>
-            <ul>
-              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
-                  <a href="catalog-item"><img src="img/img-sedona-jpg.png" width="360" height="576" alt="сайт SEDONA " /></a></li>
-              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-pink-jpg.png" width="360" height="576" alt="сайт PINK " /></a></li>
-              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-barbershop-jpg.png" width="360" height="576" alt="сайт BORODINSKI " /></a></li>
-              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-mishka-jpg.png" width="360" height="576" alt="сайт MISHKA " /></a></li>
-              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-aplus-jpg.png" width="360" height="576" alt="сайт УЧЕБА " /></a></li>
-              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
-                <a href="catalog-item"><img src="img/img-kvast-jpg.png" width="360" height="576" alt="сайт КВАСТ " /></a></li>
-            </ul>
-            <ul>
-              <li><a>1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">Следующая</a></li>
-            </ul>
-        </section>
-        <section>
-          <h2 hidden>Наши контакты</h2>
-            <h3>NERDS DISIGN STUDIO</h3>
+  <main class="main">
+    <div class="catalog-container">
+        <div class="parameters">
+          <fieldset class="filter-item">
+            <legend>Стоимость:</legend>
+              <div class="range-filter">
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar" style="margin-left: 20%; width: 30%"></div>
+                  </div>
+                  <div class="toggle toggle-min"></div>
+                  <div class="toggle toggle-max"></div>
+                </div>
+                <div class="price-controls">
+                  <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                  <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                </div>
+              </div>
+          </fieldset>
+        <h2 class="visually-hidden">СЕТКА:</h2>
+          <form  method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="grid">
+              <legend>СЕТКА:</legend>
+                <ul>
+                  <li><input type="radio" name="adaptive-grid" id="filter-adaptive-grid" checked>
+                    <label for="filter-adaptive-grid">Адаптивная</label></li>
+                  <li><input type="radio" name="fix-grid" id="filter-fix-grid">
+                    <label for="filter-fix-grid">Фиксированная</label></li>
+                  <li><input type="radio" name="rubber-grid" id="filter-rubber-grid">
+                    <label for="filter-rubber-grid">Резиновая</label></li>
+                </ul>
+              </fieldset>
+              <fieldset class="features">
+                <h2 class="visually-hidden">ОСОБЕННОСТИ:</h2>
+                  <legend>ОСОБЕННОСТИ:</legend>
+                    <ul>
+                      <li><input type="checkbox" name="slider-feature" id="filter-slider-feature" checked>
+                        <label for="filter-slider-feature">Слайдер</label></li>
+                      <li><input type="checkbox" name="block-feature" id="filter-block-feature">
+                        <label for="filter-block-feature">Блок преимуществ</label></li>
+                      <li><input type="checkbox" name="news-feature" id="filter-news-feature" checked>
+                        <label for="filter-news-feature">Новости</label></li>
+                      <li><input type="checkbox" name="gallery-feature" id="filter-gallery-feature">
+                        <label for="filter-gallery-feature">Галерея</label></li>
+                      <li><input type="checkbox" name="basket-feature" id="filter-basket-feature">
+                        <label for="filter-basket-feature">корзина</label></li>
+                    </ul>
+              </fieldset>
+              </form>
+                <button class="button button-gray" type="button">Показать</button>
+        </div>
+        <div class="works">
+          <section class="sorting">
+            <h2>СОРТИРОВАТЬ:</h2>
               <ul>
-                <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
-                <li>тел. +7(812)275-75-75</li>
+                <li>ПО ЦЕНЕ</li>
+                <li>ПО ТИПУ</li>
+                <li>ПО НАЗВАНИЮ</li>
               </ul>
-                <button type="button">Напишите нам</button>
-        </section>
-        <section>
-          <h2 hidden>Карта</h2>
-            <figure><a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a><a href="#"><img src="img/map.png" width="1440" height="416" alt="Карта"></a></figure>
-        </section>
-    </main>
-    <footer>
-        <div>
-          <ul>
-            <li><a href='#'><img src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК">Вконтакте</a></li>
-            <li><a href='#'><img src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК">Фейсбук</a></li>
-            <li><a href='#'><img src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК">Инстаграм</a></li>
+              <div class="arrows">
+                <button class="arrow arrow-down" type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Кнопка вниз"/></button>
+                <button class="arrow arrow-up" type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Кнопка вверх "/></button>
+              </div>
+            </section>
+            <section>
+              <h2 hidden>Шаблоны</h2>
+                <ul class="templates">
+                  <li><a href="catalog-item"><img class="template-image" src="img/img-sedona-jpg.png" width="360" height="576" alt="сайт SEDONA "/></a></li>
+                  <li><a href="catalog-item"><img class="template-image" src="img/img-pink-jpg.png" width="360" height="576" alt="сайт PINK "/></a></li>
+                  <li><a href="catalog-item"><img class="template-image" src="img/img-barbershop-jpg.png" width="360" height="576" alt="сайт BORODINSKI "/></a></li>
+                  <li><a href="catalog-item"><img class="template-image" src="img/img-mishka-jpg.png" width="360" height="576" alt="сайт MISHKA "/></a></li>
+                  <li><a href="catalog-item"><img class="template-image" src="img/img-aplus-jpg.png" width="360" height="576" alt="сайт УЧЕБА "/></a></li>
+                  <li><a href="catalog-item"><img class="template-image" src="img/img-kvast-jpg.png" width="360" height="576" alt="сайт КВАСТ "/></a></li>
+                </ul>
+                <ul class="page-selector">
+                  <li class="page-number"><a >1</a></li>
+                  <li class="page-number"><a  href="#">2</a></li>
+                  <li class="page-number"><a  href="#">3</a></li>
+                  <li class="next-page"><a  href="#">Следующая</a></li>
+                </ul>
+            </section>
+        </div>
+        </div>
+          <section>
+              <form class="fillform" action="https://echo.htmlacademy.ru" method="post">
+                <h2>Напишите нам</h2>
+                  <p class="text-form">
+                    <label  for="your-name">Ваше имя:</label>
+                      <input id="your-name" type="text" name="name" value="" placeholder="Нёрд">
+                  </p>
+                  <p class="text-form">
+                    <label  for="your-email">Ваш e-mail:</label>
+                      <input id="your-email" type="text" name="email" value="" placeholder="email@example.com">
+                  </p>
+                  <p class="comment-text">
+                    <label class="comment-text" for="your-text">Текст письма:</label>
+                      <textarea id="your-text" name="message" placeholder="В свободной форме" rows="5"></textarea>
+                  </p>
+                    <button class="button button-form" type="submit">Отправить</button>
+                </form>
+          </section>
+          <section class="map">
+              <div class="contacts">
+                <h2 class="visually-hidden">Наши контакты</h2>
+                  <h3>NERDS DISIGN STUDIO</h3>
+                    <ul>
+                      <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                      <li>тел. +7(812)275-75-75</li>
+                    </ul>
+                    <button class="button button-red" type="button">Напишите нам</button>
+              </div>
+                <h2 class="visually-hidden">Карта</h2>
+                  <figure class="marker">
+                    <a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a>
+                  </figure>
+          </section>
+  </main>
+    <footer class="main-footer">
+      <div class="container">
+        <div class="footer-social">
+          <ul class="social-icons">
+            <li><a href='#'><img class="ikon vk-ikon" src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК"></a></li>
+            <li><a href='#'><img class="ikon fb-ikon" src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК"></a></li>
+            <li><a href='#'><img class="ikon insta-ikon" src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК"></a></li>
           </ul>
         </div>
-        <div>
-          <p>Давайте дружить, зто выгодно!<br>Скидка  10% для друзей из социальных сетей.</p>
+        <div class="footer-discount">
+          <h3>Давайте дружить, это выгодно!</h3>
+            <p>Скидка  10% для друзей из социальных сетей.</p>
         </div>
-      </footer>
+      </div>
+    </footer>
 </body>
 </html>
